--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href="styles.css" rel="stylesheet"/>
         <title>Alexander Ho's Personal Website</title>
     </head>
