Basic Info on Pages

--- a/home.html
+++ b/home.html
@@ -9,7 +9,11 @@
     <body>
         <header>
             <nav>
-
+                <a href="/home.html">Home</a>
+                <a href="/about-me.html">About Me</a>
+                <a href="/books.html">Books</a>
+                <a href="/pets.html">Pets</a>
+                <a href="/upcoming.html">Upcoming Projects</a>
             </nav>
         </header>
         
@@ -30,7 +34,8 @@
         </main>
 
         <footer>
-            
+            <h2>Contact Me:</h2>
+            <p>Email: alx00ho@outlook.com</p>
         </footer>
     </body>
 </html>
