--- a/upcoming.html
+++ b/upcoming.html
@@ -19,9 +19,12 @@
         
         <main>
             <section>
-            </section>
-            <section class="gallery">
-                
+                <h1>Upcoming Projects</h1>
+                <ul>
+                    <li>Lobster and Tofu Website</li>
+                    <li>Musical Soundtracks</li>
+                    <li>Vietnamese Translation</li>
+                </ul>
             </section>
         </main>
 
