--- a/upcoming.html
+++ b/upcoming.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <header>
+            <h1>Alexander Ho's Personal Portfolio</h1>
             <nav>
                 <a href="/home.html">Home</a>
                 <a href="/about-me.html">About Me</a>
@@ -24,6 +25,9 @@
                     <li>Lobster and Tofu Website</li>
                     <li>Musical Soundtracks</li>
                     <li>Vietnamese Translation</li>
+                    <li>Headline Generator for Rocket League Players</li>
+                    <li>Cooking Recipes Generator</li>
+                    <li>Map of Places I've Traveled To</li>
                 </ul>
             </section>
         </main>
