--- a/books.html
+++ b/books.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <header>
+            <h1>Alexander Ho's Personal Portfolio</h1>
             <nav>
                 <a href="/home.html">Home</a>
                 <a href="/about-me.html">About Me</a>
