--- a/about-me.html
+++ b/about-me.html
@@ -10,19 +10,21 @@
         <header>
             <h1>Alexander Ho's Personal Portfolio</h1>
             <nav>
-                <a href="/home.html">Home</a>
-                <a href="/about-me.html">About Me</a>
-                <a href="/books.html">Books</a>
-                <a href="/pets.html">Pets</a>
-                <a href="/upcoming.html">Upcoming Projects</a>
+                <ul>
+                    <li><a href="/home.html">Home</a></li>
+                    <li><a href="/about-me.html">About Me</a></li>
+                    <li><a href="/books.html">Books</a></li>
+                    <li><a href="/pets.html">Pets</a></li>
+                    <li><a href="/upcoming.html">Upcoming Projects</a></li>
+                </ul>
             </nav>
         </header>
         
-        <main>
+        <main class="about-me-main">
             <section>
-                <p>Growing up, I enjoyed working with puzzles and building structures using K'nex building sets. I would
+                <p class="about-me-paragraph">Growing up, I enjoyed working with puzzles and building structures using K'nex building sets. I would
                     spend hours working patiently and cautiously placing the pieces together. Puzzles are still one of my
-                    favorites pastimes, listening to albums and soundtracks while at work. Once I learned about coding
+                    favorites pastimes, where I'm able to listen to enticing albums and podcasts while at work. Once I learned about coding
                     in high school, I thought that Computer Science would be an exciting fit for my major and aligned with
                     my career interests thus achieved a Bachelor of Science C.S. degree from the University of North
                     Carolina. During my time as an undergraduate student, I did run into a couple of laptop issues, battery
