--- a/home.html
+++ b/home.html
@@ -10,21 +10,25 @@
         <header>
             <h1>Alexander Ho's Personal Portfolio</h1>
             <nav>
-                <a href="/home.html">Home</a>
-                <a href="/about-me.html">About Me</a>
-                <a href="/books.html">Books</a>
-                <a href="/pets.html">Pets</a>
-                <a href="/upcoming.html">Upcoming Projects</a>
+                <ul>
+                    <li><a href="/home.html">Home</a></li>
+                    <li><a href="/about-me.html">About Me</a></li>
+                    <li><a href="/books.html">Books</a></li>
+                    <li><a href="/pets.html">Pets</a></li>
+                    <li><a href="/upcoming.html">Upcoming Projects</a></li>
+                </ul>
             </nav>
         </header>
         
         <main>
-            <section>
+            <section class="main-page">
                 <img src="images/Reception.png" class="main-photo">
-                <h1>Alexander Ho</h1>
-                <h2>University of North Carolina Alumni</h2>
-                <h3>B.S. Computer Science</h2>
-                <h3>Music Minor</h2>
+                <div class="main-page-info">
+                    <h1>Alexander Ho</h1>
+                    <h2>University of North Carolina Alumni</h2>
+                    <h3>B.S. Computer Science</h2>
+                    <h3>Music Minor</h2>
+                </div>
             </section>
             <section class="small-info">
                 <p>I currently work at Tea Hill as a Tearista, making various kinds of boba teas for customers!</p>
