--- a/upcoming.html
+++ b/upcoming.html
@@ -10,11 +10,13 @@
         <header>
             <h1>Alexander Ho's Personal Portfolio</h1>
             <nav>
-                <a href="/home.html">Home</a>
-                <a href="/about-me.html">About Me</a>
-                <a href="/books.html">Books</a>
-                <a href="/pets.html">Pets</a>
-                <a href="/upcoming.html">Upcoming Projects</a>
+                <ul>
+                    <li><a href="/home.html">Home</a></li>
+                    <li><a href="/about-me.html">About Me</a></li>
+                    <li><a href="/books.html">Books</a></li>
+                    <li><a href="/pets.html">Pets</a></li>
+                    <li><a href="/upcoming.html">Upcoming Projects</a></li>
+                </ul>
             </nav>
         </header>
         
