--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                     <li><a href="/about-me.html">About Me</a></li>
                     <li><a href="/books.html">Books</a></li>
                     <li><a href="/pets.html">Pets</a></li>
-                    <li><a href="/upcoming.html">Upcoming Projects</a></li>
+                    <li><a href="/upcoming.html">Projects</a></li>
                 </ul>
             </nav>
         </header>
