--- a/upcoming.html
+++ b/upcoming.html
@@ -30,6 +30,7 @@
                     <li>Headline Generator for Rocket League Players</li>
                     <li>Cooking Recipes Generator</li>
                     <li>Map of Places I've Traveled To</li>
+                    <li>Java Snake Project</li>
                 </ul>
             </section>
         </main>
