--- a/upcoming.html
+++ b/upcoming.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="/home.html">Home</a></li>
                     <li><a href="/about-me.html">About Me</a></li>
+                    <li><a href="/resume.html">Resume</a></li>
                     <li><a href="/books.html">Books</a></li>
                     <li><a href="/pets.html">Pets</a></li>
                     <li><a href="/upcoming.html">Projects</a></li>
