Added Donut Animation
Used Video Tag for MP4 file
- May change to gif

--- a/upcoming.html
+++ b/upcoming.html
@@ -34,6 +34,11 @@
                     <li>Java Snake Project</li>
                 </ul>
             </section>
+            <section id="3d-projects">
+                <video width="270" height="360" autoplay controls loop muted>
+                    <source src="./videos/Donut Animation.MP4" type="video/MP4"/>
+                </video>
+            </section>
         </main>
 
         <footer>
