--- a/about-me.html
+++ b/about-me.html
@@ -28,11 +28,13 @@
                     favorites pastimes, where I'm able to listen to enticing albums and podcasts while at work. Once I learned about coding
                     in high school, I thought that Computer Science would be an exciting fit for my major and aligned with
                     my career interests thus achieved a Bachelor of Science C.S. degree from the University of North
-                    Carolina. During my time as an undergraduate student, I did run into a couple of laptop issues, battery
-                    and RAM failures, that caused me to learn new development sequences to conitnue to be active in group
+                    Carolina. During my time as an undergraduate student, I ran into a couple of laptop issues, battery
+                    and RAM failures, that forced me to learn new development sequences quickly to conitnue to be active in group
                     projects and finishing class assignments on time. One of my favorite projects that was a Rocket League Stats
                     webpage that took the replays of professional Rocket League and complied them into a spreadsheet-like table
-                    for users to nitpick and critique their favorite players and teams.
+                    for users to nitpick and critique their favorite players and teams. Another project that I thoroughly enjoyed was Ancient Path
+                    Adventures where my team and I created a web applicaiton for their game, allowing teachers to create and assign modules that
+                    students would be able to join and interact with. You can find out more about these projects in my Projects page.
                 </p>
             </section>
         </main>
