--- a/resume.html
+++ b/resume.html
@@ -23,57 +23,68 @@
         
         <main>
             <section class="resume">
-                <h2>Ancient Path Adventures: Software Developer</h2>
-                <h3>August 2021 - December 2021</h3>
-                <ul>
-                    <li>Structured 3 tiers of varied account access for the end user, that was
-                        dependent on the website page</li>
-                    <li>Decreased the risk of users’ account information being exposed by
-                        implementing Firebase database</li>
-                    <li>Delegated tasks amongst the team members and documented progress through a
-                        Trello board; identified 5 defects through weekly refinement sessions, solved
-                        with solutions to improve process flow</li>
-                    <li>Designed teacher accounts with the option to create classes and assign provided
-                        or personal modules</li>
-                    <li>Served as Design Lead by organizing the layout of the accompanying website for
-                        the game Promised Land Journey utilizing React and Redux Toolkit in Visual
-                        Studio Code</li>
-                </ul>
-                <h2>Tea Hill: Team Leader</h2>
-                <h3>August 2022 - Present</h3>
-                <ul>
-                    <li>Memorized 50+ recipes in order to replicate drinks efficiently in the highest
-                        quality for all customers</li>
-                    <li>Decided when to prepare boba, teas, purees, and other ingredients to maximize
-                        freshness throughout operating hours</li>
-                    <li>Reported shortages of supplies to the owner, accept packages from suppliers,
-                        and organized supplies to increase efficiency</li>
-                    <li>Spoke to customers in a welcoming manner and ensured their order was correct,
-                        suggested variety of drinks and food, informed them about wait times for menu
-                        items, and handled transactions with various payment methods</li>
-                    <li>Understood amount of time required to process orders to work efficiently with
-                        in-person, DoorDash, and online orders</li>
-                </ul>
-                <h2>Mister Vietnam of the Carolinas: Coordinators</h2>
-                <h3>August 2022 - Present</h3>
-                <ul>
-                    <li>Prepared bi-weekly practices for contestants by scheduling, obtaining lunch, and providing transportation</li>
-                    <li>Encouraged contestants and received feedback from the community to better the pageant for next year</li>
-                </ul>
-                <h2>UNC Esports: Rocket League Officer & Varsity Captain</h2>
-                <h3>August 2019 - May 2022</h3>
-                <ul>
-                    <li>Organized online weekly events throughout the semesters by designing a safe space for members to connect with each other</li>
-                    <li>Successfully executed 10 public tournaments with the UNC Esports Club and UNC Campus Recreation</li>
-                    <li>Created an executive board and delegated responsibilities amongst appointed members</li>
-                </ul>
-                <h2>City Project: Participant</h2>
-                <h3>May 2021 - July 2021</h3>
-                <ul>
-                    <li>Attended leadership training classes for 6 weeks; applied training on a week-long trip for the Washington, D.C. community</li>
-                    <li>Served at Assist Pregnancy Center by assisting the staff move their equipment into their new location</li>
-                    <li>Assisted janitorial staff at Gunston Middle School with landscaping and exterior clean-up for 3 days</li>
-                </ul>
+                <div class="resume-item">
+                    <h2>Ancient Path Adventures: Software Developer</h2>
+                    <h3>August 2021 - December 2021</h3>
+                    <ul>
+                        <li>Structured 3 tiers of varied account access for the end user, that was
+                            dependent on the website page</li>
+                        <li>Decreased the risk of users’ account information being exposed by
+                            implementing Firebase database</li>
+                        <li>Delegated tasks amongst the team members and documented progress through a
+                            Trello board; identified 5 defects through weekly refinement sessions, solved
+                            with solutions to improve process flow</li>
+                        <li>Designed teacher accounts with the option to create classes and assign provided
+                            or personal modules</li>
+                        <li>Served as Design Lead by organizing the layout of the accompanying website for
+                            the game Promised Land Journey utilizing React and Redux Toolkit in Visual
+                            Studio Code</li>
+                    </ul>
+                </div>
+                <div class="resume-item">
+                    <h2>Tea Hill: Team Leader</h2>
+                    <h3>August 2022 - Present</h3>
+                    <ul>
+                        <li>Memorized 50+ recipes in order to replicate drinks efficiently in the highest
+                            quality for all customers</li>
+                        <li>Decided when to prepare boba, teas, purees, and other ingredients to maximize
+                            freshness throughout operating hours</li>
+                        <li>Reported shortages of supplies to the owner, accept packages from suppliers,
+                            and organized supplies to increase efficiency</li>
+                        <li>Spoke to customers in a welcoming manner and ensured their order was correct,
+                            suggested variety of drinks and food, informed them about wait times for menu
+                            items, and handled transactions with various payment methods</li>
+                        <li>Understood amount of time required to process orders to work efficiently with
+                            in-person, DoorDash, and online orders</li>
+                    </ul>
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <h2>Mister Vietnam of the Carolinas: Coordinators</h2>
+                    <h3>August 2022 - Present</h3>
+                    <ul>
+                        <li>Prepared bi-weekly practices for contestants by scheduling, obtaining lunch, and providing transportation</li>
+                        <li>Encouraged contestants and received feedback from the community to better the pageant for next year</li>
+                    </ul>
+                </div>
+                <div class="resume-item">
+                    <h2>UNC Esports: Rocket League Officer & Varsity Captain</h2>
+                    <h3>August 2019 - May 2022</h3>
+                    <ul>
+                        <li>Organized online weekly events throughout the semesters by designing a safe space for members to connect with each other</li>
+                        <li>Successfully executed 10 public tournaments with the UNC Esports Club and UNC Campus Recreation</li>
+                        <li>Created an executive board and delegated responsibilities amongst appointed members</li>
+                    </ul>
+                </div>
+                <div class="resume-item">
+                    <h2>City Project: Participant</h2>
+                    <h3>May 2021 - July 2021</h3>
+                    <ul>
+                        <li>Attended leadership training classes for 6 weeks; applied training on a week-long trip for the Washington, D.C. community</li>
+                        <li>Served at Assist Pregnancy Center by assisting the staff move their equipment into their new location</li>
+                        <li>Assisted janitorial staff at Gunston Middle School with landscaping and exterior clean-up for 3 days</li>
+                    </ul>
+                </div>
             </section>
         </main>
 
