--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
             <h1>Alexander Ho's Personal Portfolio</h1>
             <nav>
                 <ul>
-                    <li><a href="/home.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/about-me.html">About Me</a></li>
                     <li><a href="/resume.html">Resume</a></li>
                     <li><a href="/books.html">Books</a></li>
