--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="styles.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="styles.css"/>
         <title>Alexander Ho's Personal Website</title>
     </head>
     <body>
