Some CSS Code Styling

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         </header>
         
         <main>
-            <section class="main-page">
-                <img src="images/Reception.png" class="main-photo">
-                <div class="main-page-info">
+            <section class="home-page">
+                <img src="images/Reception.png" class="home-photo">
+                <div class="home-page-info">
                     <h1>Alexander Ho</h1>
                     <h2>University of North Carolina Alumni</h2>
                     <h3>B.S. Computer Science</h2>
                     <h3>Music Minor</h2>
                 </div>
             </section>
-            <section class="small-info">
+            <section class="home-small-info">
                 <p>I currently work at Tea Hill as a Tearista, making various kinds of boba teas for customers!</p>
             </section>
-            <section class="gallery">
+            <section class="home-gallery">
                 
             </section>
         </main>
