--- a/about-me.html
+++ b/about-me.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="styles.css"/>
-        <title>Alexander Ho's Personal Website</title>
-    </head>
-    <body>
-        <header>
-            <h1>Alexander Ho's Personal Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about-me.html">About Me</a></li>
-                    <li><a href="/resume.html">Resume</a></li>
-                    <li><a href="/books.html">Books</a></li>
-                    <li><a href="/pets.html">Pets</a></li>
-                    <li><a href="/upcoming.html">Projects</a></li>
-                </ul>
-            </nav>
-        </header>
-        
-        <main class="about-me-main">
-            <section>
-                <p class="about-me-paragraph">Growing up, I enjoyed working with puzzles and building structures using K'nex building sets. I would
-                    spend hours working patiently and cautiously placing the pieces together. Puzzles are still one of my
-                    favorites pastimes, where I'm able to listen to enticing albums and podcasts while at work. Once I learned about coding
-                    in high school, I thought that Computer Science would be an exciting fit for my major and aligned with
-                    my career interests thus achieved a Bachelor of Science C.S. degree from the University of North
-                    Carolina. During my time as an undergraduate student, I ran into a couple of laptop issues, battery
-                    and RAM failures, that forced me to learn new development sequences quickly to conitnue to be active in group
-                    projects and finishing class assignments on time. One of my favorite projects that was a Rocket League Stats
-                    webpage that took the replays of professional Rocket League and complied them into a spreadsheet-like table
-                    for users to nitpick and critique their favorite players and teams. Another project that I thoroughly enjoyed was Ancient Path
-                    Adventures where my team and I created a web applicaiton for their game, allowing teachers to create and assign modules that
-                    students would be able to join and interact with. You can find out more about these projects in my Projects page.
-                </p>
-            </section>
-        </main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Alexander Ho's Personal Website</title>
+  </head>
+  <body>
+    <header>
+      <h1>Alexander Ho's Personal Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about-me.html">About Me</a></li>
+          <li><a href="/resume.html">Resume</a></li>
+          <!-- <li><a href="/books.html">Books</a></li> -->
+          <!-- <li><a href="/pets.html">Pets</a></li> -->
+          <li><a href="/upcoming.html">Projects</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <footer>
-            <h2>Contact Me:</h2>
-            <p>Email: alx00ho@outlook.com</p>
-        </footer>
-    </body>
+    <main class="about-me-main">
+      <section>
+        <p class="about-me-paragraph">
+          Growing up, I enjoyed working with puzzles and building structures
+          using K'nex building sets. I would spend hours working patiently and
+          cautiously placing the pieces together. Puzzles are still one of my
+          favorites pastimes, where I'm able to listen to enticing albums and
+          podcasts while at work. Once I learned about coding in high school, I
+          thought that Computer Science would be an exciting fit for my major
+          and aligned with my career interests thus achieved a Bachelor of
+          Science C.S. degree from the University of North Carolina. During my
+          time as an undergraduate student, I ran into a couple of laptop
+          issues, battery and RAM failures, that forced me to learn new
+          development sequences quickly to conitnue to be active in group
+          projects and finishing class assignments on time. One of my favorite
+          projects that was a Rocket League Stats webpage that took the replays
+          of professional Rocket League and complied them into a
+          spreadsheet-like table for users to nitpick and critique their
+          favorite players and teams. Another project that I thoroughly enjoyed
+          was Ancient Path Adventures where my team and I created a web
+          applicaiton for their game, allowing teachers to create and assign
+          modules that students would be able to join and interact with. You can
+          find out more about these projects in my Projects page.
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <h2>Contact Me:</h2>
+      <p>Email: alx00ho@outlook.com</p>
+    </footer>
+  </body>
 </html>
