--- a/books.html
+++ b/books.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="styles.css"/>
-        <title>Alexander Ho's Personal Website</title>
-    </head>
-    <body>
-        <header>
-            <h1>Alexander Ho's Personal Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about-me.html">About Me</a></li>
-                    <li><a href="/resume.html">Resume</a></li>
-                    <li><a href="/books.html">Books</a></li>
-                    <li><a href="/pets.html">Pets</a></li>
-                    <li><a href="/upcoming.html">Projects</a></li>
-                </ul>
-            </nav>
-        </header>
-        
-        <main>
-            <h1>Book List</h1>
-            <section>
-                <h2>To Read:</h2>
-                <ul>
-                    <li>Harry Potter and the Half-Blood Prince</li>
-                    <li>Harry Potter and the Deathly Hallows</li>
-                    <li>The Martian</li>
-                    <li>The Lord of the Rings</li>
-                </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Alexander Ho's Personal Website</title>
+  </head>
+  <body>
+    <header>
+      <h1>Alexander Ho's Personal Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about-me.html">About Me</a></li>
+          <li><a href="/resume.html">Resume</a></li>
+          <!-- <li><a href="/books.html">Books</a></li> -->
+          <!-- <li><a href="/pets.html">Pets</a></li> -->
+          <li><a href="/upcoming.html">Projects</a></li>
+        </ul>
+      </nav>
+    </header>
 
-                <h2>Finished:</h2>
-                <ul>
-                    <li>Percy Jackson and the Olympians</li>
-                    <li>The Heroes of Olympus</li>
-                    <li>The Trials of Apollo</li>
-                    <li>The Books of Ember</li>
-                </ul>
-            </section>
-        </main>
+    <main>
+      <h1>Book List</h1>
+      <section>
+        <h2>To Read:</h2>
+        <ul>
+          <li>Harry Potter and the Half-Blood Prince</li>
+          <li>Harry Potter and the Deathly Hallows</li>
+          <li>The Martian</li>
+          <li>The Lord of the Rings</li>
+        </ul>
 
-        <footer>
-            <h2>Contact Me:</h2>
-            <p>Email: alx00ho@outlook.com</p>
-        </footer>
-    </body>
+        <h2>Finished:</h2>
+        <ul>
+          <li>Percy Jackson and the Olympians</li>
+          <li>The Heroes of Olympus</li>
+          <li>The Trials of Apollo</li>
+          <li>The Books of Ember</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <h2>Contact Me:</h2>
+      <p>Email: alx00ho@outlook.com</p>
+    </footer>
+  </body>
 </html>
