--- a/pets.html
+++ b/pets.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="styles.css"/>
-        <title>Alexander Ho's Personal Website</title>
-    </head>
-    <body>
-        <header>
-            <h1>Alexander Ho's Personal Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about-me.html">About Me</a></li>
-                    <li><a href="/resume.html">Resume</a></li>
-                    <li><a href="/books.html">Books</a></li>
-                    <li><a href="/pets.html">Pets</a></li>
-                    <li><a href="/upcoming.html">Projects</a></li>
-                </ul>
-            </nav>
-        </header>
-        
-        <main>
-            <section>
-            </section>
-            <section class="gallery">
-                
-            </section>
-        </main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Alexander Ho's Personal Website</title>
+  </head>
+  <body>
+    <header>
+      <h1>Alexander Ho's Personal Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about-me.html">About Me</a></li>
+          <li><a href="/resume.html">Resume</a></li>
+          <!-- <li><a href="/books.html">Books</a></li> -->
+          <!-- <li><a href="/pets.html">Pets</a></li> -->
+          <li><a href="/upcoming.html">Projects</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <footer>
-            <h2>Contact Me:</h2>
-            <p>Email: alx00ho@outlook.com</p>
-        </footer>
-    </body>
+    <main>
+      <section></section>
+      <section class="gallery"></section>
+    </main>
+
+    <footer>
+      <h2>Contact Me:</h2>
+      <p>Email: alx00ho@outlook.com</p>
+    </footer>
+  </body>
 </html>
