--- a/resume.html
+++ b/resume.html
@@ -14,8 +14,8 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about-me.html">About Me</a></li>
                     <li><a href="/resume.html">Resume</a></li>
-                    <li><a href="/books.html">Books</a></li>
-                    <li><a href="/pets.html">Pets</a></li>
+                    <!-- <li><a href="/books.html">Books</a></li> -->
+                    <!-- <li><a href="/pets.html">Pets</a></li> -->
                     <li><a href="/upcoming.html">Projects</a></li>
                 </ul>
             </nav>
