--- a/books.html
+++ b/books.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Alexander Ho's Personal Portfolio</h1>
+      <h1>Alexander Ho</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
