--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="styles.css"/>
         <title>Alexander Ho's Personal Website</title>
+
+        <script src="https://kit.fontawesome.com/9d71950093.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
-            <h1>Alexander Ho's Personal Portfolio</h1>
+            <h1>Alexander Ho</h1>
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
