Updated Upcoming to Projects
- changed html file name to projects instead of upcoming
- Added Boba Training Game
-Prettier

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Alexander Ho</h1>
+      <h1><a href="/">Alexander Ho</a></h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -16,7 +16,7 @@
           <li><a href="/resume.html">Resume</a></li>
           <!-- <li><a href="/books.html">Books</a></li> -->
           <!-- <li><a href="/pets.html">Pets</a></li> -->
-          <li><a href="/upcoming.html">Projects</a></li>
+          <li><a href="/projects.html">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -34,6 +34,7 @@
               <li>Cooking Recipes Generator</li>
               <li>Map of Places I've Traveled To</li>
               <li>100 "_____" Generator</li>
+              <li>Boba Training Game</li>
             </ul>
           </section>
           <section id="projects-past" class="projects past">
@@ -50,8 +51,8 @@
                 </a>
                 on Youtube
               </p>
-              <video width="270" height="360" autoplay controls loop muted>
-                <source src="./videos/Donut Animation.MP4" type="video/MP4" />
+              <video width="270" height="360" autoplay loop muted>
+                <source src="./videos/Donut Animation.mp4" type="video/MP4" />
               </video>
             </section>
           </section>
