Updated Upcoming to Projects pt. 2

--- a/books.html
+++ b/books.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Alexander Ho</h1>
+      <h1><a href="/">Alexander Ho</a></h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -16,7 +16,7 @@
           <li><a href="/resume.html">Resume</a></li>
           <!-- <li><a href="/books.html">Books</a></li> -->
           <!-- <li><a href="/pets.html">Pets</a></li> -->
-          <li><a href="/upcoming.html">Projects</a></li>
+          <li><a href="/projects.html">Projects</a></li>
         </ul>
       </nav>
     </header>
