Updated About Me
- Added image of work
- Moved info from home page to about-me as it was a bit more descriptive of who I am
- Fixed a typo and edited paragraph

--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Alexander Ho</h1>
+      <h1><a href="/">Alexander Ho</a></h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -16,12 +16,29 @@
           <li><a href="/resume.html">Resume</a></li>
           <!-- <li><a href="/books.html">Books</a></li> -->
           <!-- <li><a href="/pets.html">Pets</a></li> -->
-          <li><a href="/upcoming.html">Projects</a></li>
+          <li><a href="/projects.html">Projects</a></li>
         </ul>
       </nav>
     </header>
 
     <main class="about-me-main">
+      <section id="about-me-landing" class="landing border">
+        <section class="about-me">
+          <img src="images/Tea-Hill.jpeg" class="about-me-photo border" />
+          <div class="about-me-info">
+            <h1>Alexander Ho</h1>
+            <p>University of North Carolina Alumni</p>
+            <p>B.S. Computer Science</p>
+            <p>Music Minor</p>
+          </div>
+        </section>
+        <section class="about-me-small-info">
+          <p>
+            I currently work at Tea Hill as a Team Leader, help serve various
+            kinds of Taiwanese teas for customers!
+          </p>
+        </section>
+      </section>
       <section>
         <p class="about-me-paragraph">
           Growing up, I enjoyed working with puzzles and building structures
@@ -41,9 +58,8 @@
           spreadsheet-like table for users to nitpick and critique their
           favorite players and teams. Another project that I thoroughly enjoyed
           was Ancient Path Adventures where my team and I created a web
-          applicaiton for their game, allowing teachers to create and assign
-          modules that students would be able to join and interact with. You can
-          find out more about these projects in my Projects page.
+          application for their game, allowing teachers to create and assign
+          modules that students would be able to join and interact with.
         </p>
       </section>
     </main>
