--- a/index.html
+++ b/index.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="styles.css"/>
-        <title>Alexander Ho's Personal Website</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Alexander Ho's Personal Website</title>
 
-        <script src="https://kit.fontawesome.com/9d71950093.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <h1>Alexander Ho</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about-me.html">About Me</a></li>
-                    <li><a href="/resume.html">Resume</a></li>
-                    <!-- <li><a href="/books.html">Books</a></li> -->
-                    <!-- <li><a href="/pets.html">Pets</a></li> -->
-                    <li><a href="/upcoming.html">Projects</a></li>
-                </ul>
-            </nav>
-        </header>
-        
-        <main>
-            <section class="home-page">
-                <img src="images/Reception.png" class="home-photo">
-                <div class="home-page-info">
-                    <h1>Alexander Ho</h1>
-                    <h2>University of North Carolina Alumni</h2>
-                    <h3>B.S. Computer Science</h2>
-                    <h3>Music Minor</h2>
-                </div>
-            </section>
-            <section class="home-small-info">
-                <p>I currently work at Tea Hill as a Tearista, making various kinds of boba teas for customers!</p>
-            </section>
-            <section class="home-gallery">
-                
-            </section>
-        </main>
+    <script
+      src="https://kit.fontawesome.com/9d71950093.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <h1><a href="/">Alexander Ho</a></h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about-me.html">About Me</a></li>
+          <li><a href="/resume.html">Resume</a></li>
+          <!-- <li><a href="/books.html">Books</a></li> -->
+          <!-- <li><a href="/pets.html">Pets</a></li> -->
+          <li><a href="/projects.html">Projects</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <footer>
-            <h2>Contact Me:</h2>
-            <p>Email: alx00ho@outlook.com</p>
-        </footer>
-    </body>
+    <main>
+      <section id="home-top">
+        <img src="images/Reception.png" alt="" id="home-photo" class="border" />
+        <section id="home-intro" class="landing border">
+          <h1>Hello!</h1>
+          <p>I'm Alex, a developer based in Chapel Hill, North Carolina.</p>
+        </section>
+      </section>
+      <section class="home-gallery"></section>
+    </main>
+
+    <footer>
+      <h2>Contact Me:</h2>
+      <p>Email: alx00ho@outlook.com</p>
+    </footer>
+  </body>
 </html>
