Edited About Me
Reworked some of the about me paragraphs to prepare the page for styling

--- a/about-me.html
+++ b/about-me.html
@@ -39,27 +39,41 @@
           </p>
         </section>
       </section>
-      <section>
-        <p class="about-me-paragraph">
-          Growing up, I enjoyed working with puzzles and building structures
-          using K'nex building sets. I would spend hours working patiently and
-          cautiously placing the pieces together. Puzzles are still one of my
-          favorites pastimes, where I'm able to listen to enticing albums and
-          podcasts while at work. Once I learned about coding in high school, I
-          thought that Computer Science would be an exciting fit for my major
-          and aligned with my career interests thus achieved a Bachelor of
-          Science C.S. degree from the University of North Carolina. During my
-          time as an undergraduate student, I ran into a couple of laptop
-          issues, battery and RAM failures, that forced me to learn new
-          development sequences quickly to conitnue to be active in group
-          projects and finishing class assignments on time. One of my favorite
-          projects that was a Rocket League Stats webpage that took the replays
-          of professional Rocket League and complied them into a
-          spreadsheet-like table for users to nitpick and critique their
-          favorite players and teams. Another project that I thoroughly enjoyed
-          was Ancient Path Adventures where my team and I created a web
-          application for their game, allowing teachers to create and assign
-          modules that students would be able to join and interact with.
+      <section class="about-me-paragraph">
+        <p>
+          Growing up, I have always been captivated with creating projects with
+          my hands. Puzzles, K'nex building sets, and the like caught my
+          attention. I would spend hours working patiently and with a detailed
+          eye place the pieces together. Puzzles are still one of my favorites
+          pastimes, where I'm able to listen to enticing albums and podcasts
+          while at work.
+        </p>
+        <p>
+          I discovered the Software Developer career path in high school where
+          it fascinated the creative part of my brain and thus pursued and
+          achieved a Bachelor of Science C.S. degree from the University of
+          North Carolina in 2022. During my undergraduate career, I learned that
+          time is very precious and to use it wisely between my peers, family,
+          friends, and myself. When building my development skills, I had to
+          learn them quickly to be active in my contributions on group projects
+          and finishing class assignments on time.
+        </p>
+        <p>
+          One of my favorite projects is a Rocket League Statistics web
+          application that took the replays of professional Rocket League and
+          collegiate Rocket League and complied them into a readable table for
+          users to compare various statistics their favorite players and teams.
+        </p>
+        <p>
+          Another project that I thoroughly enjoyed was Ancient Path Adventures
+          (APA) where my team and I created a web application for their game,
+          Promised Land Journey. We developed a platform where APA were able to
+          create their own modules directly related to the game and stored them
+          in a database. These modules consisted of quizzes, videos, and
+          readings. Teachers were allowed to use these example modules or make
+          their own after paying a subscription to use APA's services. Students
+          could join classes thorugh a unique access code that was randomly
+          generated upon class created.
         </p>
       </section>
     </main>
